@@ -1,6 +1,7 @@
 # 0.14.0 (2020-12-XX)
 
   * (position) add object-fit classes
+  * (type) white-space
 
 # 0.13.2 (2020-11-19)
 
